<resources>
    <string name="app_name">АСКУЭ</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="authorization_failed">Авторизация не удалась</string>
    <string name="please_authorization">Пожалуйста, авторизуйтесь</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="you_have_successfully_logged_out">Вы успешно вышли из учетной записи</string>
    <string name="reset">Сбросить</string>
    <string name="search">Поиск</string>
    <string name="apartment_number">Номер квартиры</string>
    <string name="number">Номер</string>
    <string name="found">Найдено</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="contract_number">Номер договора</string>
    <string name="serial_number">Серийный номер</string>
    <string name="locality">Населенный пункт</string>
    <string name="street">Улица</string>
    <string name="installation_address">Адрес установки</string>
    <string name="last_seen_at">Последние изменения</string>
    <string name="personal_information">Персональная информация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="organization">Организация</string>
    <string name="email">Email</string>
    <string name="phone">Номер телефона</string>
    <string name="logout">Выйти</string>
    <string name="archive">Архив</string>
    <string name="date">Дата</string>
    <string name="device_model">Модель устройства</string>
    <string name="out_of_touch_for_over_week">Счетчики, не вышедшие на связь более недели</string>
    <string name="counters_not_connected">Счетчики не на связи</string>
    <string name="network_connection_error">Интернет-соединение потеряно, повторите попытку</string>
    <string name="try_again">Что-то пошло не так Попробуйте еще раз</string>
    <string name="press_back_leave_app">Нажмите еще раз, чтобы выйти из приложения.</string>
    <string name="counter">Счетчик</string>
    <string name="address">Адрес</string>
    <string name="time_last_reading">Время последнего показания</string>
    <string name="indications">Показания</string>
    <string name="status_check">Проверка статуса</string>
    <string name="unknown">Неизвестно</string>
    <string name="beginning_period_kWh">На начало периода, кВт/ч</string>
    <string name="end_period_kWh">На конец периода, кВт/ч</string>
    <string name="for_period_kW_h">За период, кВт/ч</string>
    <string name="back">Назад</string>
    <string name="event">События</string>
    <string name="high_level">Высокий уровень</string>
    <string name="average_level">Средний уровень</string>
    <string name="low_level">Низкий уровень</string>
    <string name="data_wait_please">Данные загружаются. Пожалуйста, подождите.</string>
    <string name="search_parameters_specified">Параметры поиска не указаны.</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="clear_search_results">Очистить результаты поиска</string>
</resources>