<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:hint="@string/from"
                android:padding="10dp" />

            <TextView
                android:id="@+id/etTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:hint="@string/to"
                android:padding="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/etContractNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/contract_number"
            android:inputType="number"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/serial_number"
            android:inputType="number"
            android:text="2800000213"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/locality"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etApartmentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:hint="@string/apartment_number"
            android:inputType="number"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/search" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>