<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:hint="@string/from"
                android:padding="10dp" />

            <TextView
                android:id="@+id/etTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:hint="@string/to"
                android:padding="10dp" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_level"
                android:textColor="#dc3545" />

            <CheckBox
                android:id="@+id/cbOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_level"
                android:textColor="#ffc107" />

            <CheckBox
                android:id="@+id/cbYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_level"
                android:textColor="#28a745" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnSearch"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/search" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>